dark mode fixes

--- a/style.css
+++ b/style.css
@@ -7,19 +7,26 @@ html, body {
 html, body.dark {
   background-color: #121214;
   color: #FFFFFF;
-  
+  --global-secondarybg-color: #121214;
+  --global-selected-color: #1a1a1c;
+  --global-textColor-color: #ffffff;
 }
 
 html, body.light {
   background-color: #FFFFFF;
   color: #121214;
+  --global-secondarybg-color: #f7f3f371;
+  --global-selected-color: #FFFFFF;
+  --global-textColor-color: #707070;
 }
 
 h1 {
+  font-family: Courier;
+  font-weight: 50;
   text-align: center;
   color: #ff8c00;
   margin: 0;
-  padding: 20px;
+  padding: 30px;
 }
 
 .grid {
@@ -36,17 +43,10 @@ h1 {
   block-size: 5px;
 }
 
-html, body.light, .answer {
-  background-color: #FFFFFF;
-}
-
-html, body.dark, .answer {
-  background-color:#121214;
-}
-
 .answer {
   font-size: 35px;
-  color: white;
+  background-color: var(--global-secondarybg-color);
+  color: var(--global-textColor-color);;
   font-family: Helvetica Neue;
   text-transform: uppercase;
   font-weight: 600;
@@ -58,11 +58,12 @@ html, body.dark, .answer {
   display: inline-block;
   margin-right: 1%;
   margin-left: 0;
+  /*caret-color: transparent;*/
 }
 
 .answer:focus {
   outline: none;
-  background-color: #1a1a1c;
+  background-color: var(--global-selected-color);
 }
 
 .button {
@@ -74,7 +75,8 @@ html, body.dark, .answer {
   outline: none;
   border-radius: 5px;
   overflow: hidden;
-  font-family:'Lora', serif;
+  /*font-family:'Lora', serif;*/
+  font-family: Courier;
   font-size: 16px;
   cursor: pointer;
   position: fixed;
@@ -83,11 +85,11 @@ html, body.dark, .answer {
 }
 
 .button:hover {
-  background-color: #ba3e31;
+  background-color: #e7850e;
 }
 
 .button:active {
-  background-color: #773028;
+  background-color: #a06216;
 }
 
 .button__icon, .button__text {
